--- a/asssets/style.css
+++ b/asssets/style.css
@@ -15,7 +15,7 @@
 }
 
 .main .box{
-    box-shadow: inset 0 0;
+    box-shadow: inset black -1px -1px 20px 100px;
     position: absolute;
     height: 100%;
     width: 100%;
