--- a/asssets/style.css
+++ b/asssets/style.css
@@ -5,12 +5,16 @@
     padding: 0px;
     margin: 0px;
 }
+body{
+    background-color: black;
+}
 
 .main{
     position:relative;
     background-image: url("/asssets/images/bg.jpg");
-    background-position: center cover;
+    background-position: center center;
     background-repeat: no-repeat;
+    background-clip: inherit;
     height: auto;
 }
 
@@ -19,9 +23,12 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    opacity: 0.44;
+    opacity: 0.69;
     top: 0;
     background-color: rgb(0, 0, 0);
+}
+button{
+    font-weight: bold;
 }
 nav{
     position: relative;
@@ -87,6 +94,7 @@ nav button{
     background-color: rgba(132, 181, 255, 0.154);
     font-family: 'Martel Sans', sans-serif;
     color: white;
+    font-weight: 900;
 }
 .email button{
     display: flex;
@@ -102,16 +110,23 @@ nav button{
     background-color: rgb(248, 16, 28);
     border-radius: 5px;
 }
+.line-seperator{
+    width: 100%;
+    height: 10px;
+    background-color: rgb(40, 39, 39);
+}
 .tv-box{
     position: relative;
     z-index: 1;
-    margin-top: 72px;
-    padding-left: 20px;
-    padding-right: 20px;
+    margin:auto;
+    max-width: 70vw;
     display: flex;
     align-items: center;
     justify-content: space-around;
     background-color: black;
+}
+.tv-box img{
+    width: 30vw;
 }
 .text{
     display: flex;
