--- a/asssets/style.css
+++ b/asssets/style.css
@@ -124,23 +124,32 @@ nav button{
     align-items: center;
     justify-content: space-around;
     background-color: black;
+    padding-top: 16px;
+
 }
 .tv-box img{
     width: 30vw;
+    position: relative;
+    z-index: 10;
+}
+.tv-screen video{
+    position: absolute;
+    right: 59px;
+    width: 296px;
+    top: 99px;
 }
 .text{
     display: flex;
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    text-align: left;
     color: white;
     font-family: 'Martel Sans', sans-serif;
-    padding-left: 30px;
 }
+
 .text .bold-head{
-    font-size: 60px;
-    font-weight: 600;
+    font-size: 50px;
+    font-weight: 700;
 }
 .text .small-text{
     font-size: 30px;
