--- a/asssets/style.css
+++ b/asssets/style.css
@@ -11,7 +11,7 @@ body{
 
 .main{
     position:relative;
-    background-image: url("/asssets/images/bg.jpg");
+    background-image: url("./asssets/images/bg.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-clip: inherit;
