--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ nav button{
 }
 .download-Box{
     padding: 60px;
-    height: 26rem;
+    height: 22rem;
     position: relative;
     display: grid;
     grid-template-columns: 50% 40%;
@@ -192,7 +192,7 @@ nav button{
     background-color: black;
     border: 2px solid rgb(92, 91, 91);
     position: absolute;
-    top: 46%;
+    top: 54%;
     left: 25%;
     grid-column: 1/2;
     grid-row: 1/2;
@@ -205,4 +205,46 @@ nav button{
 #gif-1{
     width: 50px;
     height: 50px;
+}
+
+.multi-device{
+    position: relative;
+    height: 26rem;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    padding: 10px;
+}
+.main-text{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+    font-family: 'Martel Sans', sans-serif;
+    margin-left: 150px;
+}
+.main-text :nth-child(1){
+    font-size:60px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 900;
+}
+.main-text :nth-child(3){
+    font-size:30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
+}
+.devices{
+    position: relative;
+    align-self: center;
+}
+.devices img{
+    height: 400px;
+    width: 500px;
+}
+.devices video{
+    position: absolute;
+    right: 39%;
+    top: 12%;
+    width: 311px;
+    z-index: -1;
 }
