Question section added

--- a/style.css
+++ b/style.css
@@ -280,3 +280,26 @@ nav button{
     width: 495px;
     margin-left: 150px;
 }
+.freq-que{
+    padding-top: 100px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    gap: 10px;
+    grid-template-rows: 7();
+    color: white;
+}
+.freq-que span{
+    font-size: 60px;
+    font-weight: 900;
+}
+.freq-que div{
+    display: flex;
+    justify-content: space-between;
+    font-size: 30px;
+    font-weight: 400;
+    background-color: #8080805c;
+    width: 48rem;
+    padding: 30px;
+}
