--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/c0b69670-89a3-48ca-877f-45ba7a60c16f/2642e08e-4202-490e-8e93-aff04881ee8a/IN-en-20240212-popsignuptwoweeks-perspective_alpha_website_medium.jpg");
     background-position: center center;
     background-repeat: no-repeat;
-    background-clip: inherit;
+    background-size: cover;
     height: auto;
 }
 
